# gstreamer_calling_opencv

./: CMakeLists.txt  README.md  gst_opencv_call_plugin.cpp  main.cpp
